--- a/environment/osticket.env
+++ b/environment/osticket.env
@@ -1,1 +1,18 @@
-
+MYSQL_HOST=mysql
+MYSQL_DATABASE=osticket
+MYSQL_USER=osticket
+MYSQL_PASSWORD=CH_MYSQL_PASSWORD
+INSTALL_SECRET=CH_INSTALL_SECRET
+LANGUAGE=en
+SMTP_HOST=CH_SMTP_HOST
+SMTP_PORT=CH_SMTP_PORT
+SMTP_TLS=1
+SMTP_USER=CH_SMTP_USER
+SMTP_PASSWORD=CH_SMTP_PASSWORD
+CRON_INTERVAL=
+INSTALL_EMAIL=
+INSTALL_NAME=
+ADMIN_FIRSTNAME=
+ADMIN_LASTNAME=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=CH_ADMIN_PASSWORD
