--- a/environment/osticket.env
+++ b/environment/osticket.env
@@ -1,18 +1,18 @@
 MYSQL_HOST=mysql
+MYSQL_ROOT_PASSWORD=CH_MYSQL_ROOT_PASSWORD
 MYSQL_DATABASE=osticket
 MYSQL_USER=osticket
 MYSQL_PASSWORD=CH_MYSQL_PASSWORD
 INSTALL_SECRET=CH_INSTALL_SECRET
-LANGUAGE=en
 SMTP_HOST=CH_SMTP_HOST
 SMTP_PORT=CH_SMTP_PORT
+SMTP_FROM=CH_SMTP_FROM
 SMTP_TLS=1
 SMTP_USER=CH_SMTP_USER
-SMTP_PASSWORD=CH_SMTP_PASSWORD
-CRON_INTERVAL=
-INSTALL_EMAIL=
-INSTALL_NAME=
-ADMIN_FIRSTNAME=
-ADMIN_LASTNAME=
-ADMIN_EMAIL=
+CRON_INTERVAL=5
+INSTALL_EMAIL=CH_INSTALL_EMAIL
+INSTALL_NAME=CH_INSTALL_NAME
+ADMIN_FIRSTNAME=CH_ADMIN_FIRSTNAME
+ADMIN_LASTNAME=CH_ADMIN_LASTNAME
+ADMIN_USERNAME=CH_ADMIN_USERNAME
 ADMIN_PASSWORD=CH_ADMIN_PASSWORD
