--- a/environment/osticket.env
+++ b/environment/osticket.env
@@ -7,6 +7,7 @@ INSTALL_SECRET=CH_INSTALL_SECRET
 SMTP_HOST=CH_SMTP_HOST
 SMTP_PORT=CH_SMTP_PORT
 SMTP_FROM=CH_SMTP_FROM
+SMTP_PASSWORD=CH_SMTP_PASSWORD
 SMTP_TLS=1
 SMTP_USER=CH_SMTP_USER
 CRON_INTERVAL=5
