--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - ./.osticket.env
     links:
       - mysql:mysql
-    ports:
-      - "5335:80"
+    #ports:
+    #  - "5335:80"
     restart: always
 
   mysql:
