--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
 
   mysql:
     image: mariadb
-    container_name: mariadb
-    hostname: mariadb
+    container_name: mysql
+    hostname: mysql
     env_file:
       - ./.mariadb.env
     volumes:
