--- a/environment/osticket.env
+++ b/environment/osticket.env
@@ -13,6 +13,7 @@ SMTP_USER=CH_SMTP_USER
 CRON_INTERVAL=5
 INSTALL_EMAIL=CH_INSTALL_EMAIL
 INSTALL_NAME=CH_INSTALL_NAME
+ADMIN_MAIL=CH_ADMIN_MAIL
 ADMIN_FIRSTNAME=CH_ADMIN_FIRSTNAME
 ADMIN_LASTNAME=CH_ADMIN_LASTNAME
 ADMIN_USERNAME=CH_ADMIN_USERNAME
