--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,18 @@ services:
     volumes:
      - mariadb-data:/var/lib/mysql
     restart: always
+  
+  db-backup:
+    container_name: db-backup
+    image: tiredofit/mariadb-backup
+    links:
+     - mysql
+    volumes:
+      - ./data/backup/mysql:/backup
+      - /etc/localtime:/etc/localtime:ro
+    env_file:
+      - ./.db-backup.env
+    restart: always
  
 volumes:
   osticket-data:
